Rajout d'un truc stylé
Newsletter -> Envoi  -> Hover
Effet fait en modifiant animate.css et l'index

--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                                 <div class="transitionFadeInUp secondTransition">
                                     <form class="newsletter-form" action="" method="post">
                                         <input type="text" id="email" name="email" value="" placeholder="E-mail" />
-                                        <input type="submit" id="submit" value="Envoyer" />
+                                        <input type="submit" id="submit" value="Envoyer" class="topulse"/>
                                     </form>
                                 </div>
                             </div>
