--- a/index.html
+++ b/index.html
@@ -632,7 +632,9 @@
     <!-- Style -->
     <script type="text/javascript" src="js/style.min.js"></script>
 
-
+	<!-- MSSQL -->
+	<script type="text/javascript" src="node/mssql/connect.js"</script>
+	
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
