--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Landing Page</title>
+
+    <title><%= title %></title>
 
     <!-- Google Web Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
@@ -28,7 +29,6 @@
 
     <!-- CSS file -->
     <link href="css/style.css" rel="stylesheet">
-
 
 </head>
 <body>
@@ -633,7 +633,7 @@
     <script type="text/javascript" src="js/style.min.js"></script>
 
 	<!-- MSSQL -->
-	<script type="text/javascript" src="node/mssql/connect.js"</script>
+	<script type="text/javascript" src="node/mssql/connect.js"></script>
 	
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
