--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <title><%= title %></title>
+    <title>not yet</title>
 
     <!-- Google Web Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
@@ -633,7 +633,7 @@
     <script type="text/javascript" src="js/style.min.js"></script>
 
 	<!-- MSSQL -->
-	<script type="text/javascript" src="node/mssql/connect.js"></script>
+	<script type="text/javascript" src="connect.js"></script>
 	
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
